projet_gl/src/test/deca/codegen/valid/ERROR/dereference.deca
// Description:
//    Programme test si l'identifier non déclaré est détecté
//
// Resultats:
//    Error : Object is null
// 
// Historique:
//    cree le 09/01/2024

class A {
	void method(){}
}

{
    A a;

	a.method();
}

